// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ValueSet to Type Schema (snapshot) administrative-gender 1`] = `
"{
  "identifier": {
    "kind": "value-set",
    "package": "hl7.fhir.r4.core",
    "version": "4.0.1",
    "name": "AdministrativeGender",
    "url": "http://hl7.org/fhir/ValueSet/administrative-gender"
  },
  "description": "The gender of a person used for administrative purposes.",
  "concept": [
    {
      "system": "http://hl7.org/fhir/administrative-gender",
      "code": "male",
      "display": "Male"
    },
    {
      "system": "http://hl7.org/fhir/administrative-gender",
      "code": "female",
      "display": "Female"
    },
    {
      "system": "http://hl7.org/fhir/administrative-gender",
      "code": "other",
      "display": "Other"
    },
    {
      "system": "http://hl7.org/fhir/administrative-gender",
      "code": "unknown",
      "display": "Unknown"
    }
  ]
}"
`;

exports[`ValueSet to Type Schema (snapshot) all-languages 1`] = `
"{
  "identifier": {
    "kind": "value-set",
    "package": "hl7.fhir.r4.core",
    "version": "4.0.1",
    "name": "AllLanguages",
    "url": "http://hl7.org/fhir/ValueSet/all-languages"
  },
  "description": "This value set includes all possible codes from BCP-47 (http://tools.ietf.org/html/bcp47)",
  "compose": {
    "include": [
      {
        "system": "urn:ietf:bcp:47"
      }
    ]
  }
}"
`;

exports[`ValueSet to Type Schema (snapshot) marital-status 1`] = `
"{
  "identifier": {
    "kind": "value-set",
    "package": "hl7.fhir.r4.core",
    "version": "4.0.1",
    "name": "MaritalStatus",
    "url": "http://hl7.org/fhir/ValueSet/marital-status"
  },
  "description": "This value set defines the set of codes that can be used to indicate the marital status of a person.",
  "concept": [
    {
      "system": "http://terminology.hl7.org/CodeSystem/v3-MaritalStatus",
      "code": "A",
      "display": "Annulled"
    },
    {
      "system": "http://terminology.hl7.org/CodeSystem/v3-MaritalStatus",
      "code": "D",
      "display": "Divorced"
    },
    {
      "system": "http://terminology.hl7.org/CodeSystem/v3-MaritalStatus",
      "code": "I",
      "display": "Interlocutory"
    },
    {
      "system": "http://terminology.hl7.org/CodeSystem/v3-MaritalStatus",
      "code": "L",
      "display": "Legally Separated"
    },
    {
      "system": "http://terminology.hl7.org/CodeSystem/v3-MaritalStatus",
      "code": "M",
      "display": "Married"
    },
    {
      "system": "http://terminology.hl7.org/CodeSystem/v3-MaritalStatus",
      "code": "P",
      "display": "Polygamous"
    },
    {
      "system": "http://terminology.hl7.org/CodeSystem/v3-MaritalStatus",
      "code": "S",
      "display": "Never Married"
    },
    {
      "system": "http://terminology.hl7.org/CodeSystem/v3-MaritalStatus",
      "code": "T",
      "display": "Domestic partner"
    },
    {
      "system": "http://terminology.hl7.org/CodeSystem/v3-MaritalStatus",
      "code": "U",
      "display": "unmarried"
    },
    {
      "system": "http://terminology.hl7.org/CodeSystem/v3-MaritalStatus",
      "code": "W",
      "display": "Widowed"
    },
    {
      "system": "http://terminology.hl7.org/CodeSystem/v3-NullFlavor",
      "code": "UNK"
    }
  ]
}"
`;

exports[`FHIR Schema to Type Schema (snapshot) with cardinality 1`] = `
"[
  {
    "identifier": {
      "kind": "complex-type",
      "package": "mypackage",
      "version": "0.0.0",
      "name": "Cardinality",
      "url": "http://hl7.org/fhir/StructureDefinition/Cardinality"
    },
    "base": {
      "kind": "complex-type",
      "package": "hl7.fhir.r4.core",
      "version": "4.0.1",
      "name": "Element",
      "url": "http://hl7.org/fhir/StructureDefinition/Element"
    },
    "fields": {
      "zero_or_one": {
        "type": {
          "kind": "primitive-type",
          "package": "hl7.fhir.r4.core",
          "version": "4.0.1",
          "name": "string",
          "url": "http://hl7.org/fhir/StructureDefinition/string"
        },
        "required": false,
        "excluded": false,
        "array": true,
        "min": 0,
        "max": 1
      },
      "one": {
        "type": {
          "kind": "primitive-type",
          "package": "hl7.fhir.r4.core",
          "version": "4.0.1",
          "name": "string",
          "url": "http://hl7.org/fhir/StructureDefinition/string"
        },
        "required": false,
        "excluded": false,
        "array": true,
        "min": 1,
        "max": 1
      },
      "many": {
        "type": {
          "kind": "primitive-type",
          "package": "hl7.fhir.r4.core",
          "version": "4.0.1",
          "name": "string",
          "url": "http://hl7.org/fhir/StructureDefinition/string"
        },
        "required": false,
        "excluded": false,
        "array": true,
        "min": 42,
        "max": 42
      },
      "one_or_many": {
        "type": {
          "kind": "primitive-type",
          "package": "hl7.fhir.r4.core",
          "version": "4.0.1",
          "name": "string",
          "url": "http://hl7.org/fhir/StructureDefinition/string"
        },
        "required": false,
        "excluded": false,
        "array": true,
        "min": 1
      },
      "zero_or_many": {
        "type": {
          "kind": "primitive-type",
          "package": "hl7.fhir.r4.core",
          "version": "4.0.1",
          "name": "string",
          "url": "http://hl7.org/fhir/StructureDefinition/string"
        },
        "required": false,
        "excluded": false,
        "array": true
      }
    },
    "description": "Base StructureDefinition for Coding Type: A reference to a code defined by a terminology system.",
    "dependencies": [
      {
        "kind": "complex-type",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "Element",
        "url": "http://hl7.org/fhir/StructureDefinition/Element"
      },
      {
        "kind": "primitive-type",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "string",
        "url": "http://hl7.org/fhir/StructureDefinition/string"
      }
    ]
  }
]"
`;

exports[`FHIR Schema to Type Schema (snapshot) with resource with string 1`] = `
"[
  {
    "identifier": {
      "kind": "resource",
      "package": "mypackage",
      "version": "0.0.0",
      "name": "WithPrimitiveString",
      "url": "http://example.io/fhir/WithPrimitiveString"
    },
    "base": {
      "kind": "resource",
      "package": "hl7.fhir.r4.core",
      "version": "4.0.1",
      "name": "DomainResource",
      "url": "http://hl7.org/fhir/StructureDefinition/DomainResource"
    },
    "fields": {
      "someString": {
        "type": {
          "kind": "primitive-type",
          "package": "hl7.fhir.r4.core",
          "version": "4.0.1",
          "name": "string",
          "url": "http://hl7.org/fhir/StructureDefinition/string"
        },
        "required": true,
        "excluded": false,
        "array": false
      }
    },
    "description": "description",
    "dependencies": [
      {
        "kind": "resource",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "DomainResource",
        "url": "http://hl7.org/fhir/StructureDefinition/DomainResource"
      },
      {
        "kind": "primitive-type",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "string",
        "url": "http://hl7.org/fhir/StructureDefinition/string"
      }
    ]
  }
]"
`;

exports[`FHIR Schema to Type Schema (snapshot) with resource with code 1`] = `
"[
  {
    "identifier": {
      "kind": "resource",
      "package": "mypackage",
      "version": "0.0.0",
      "name": "WithCode",
      "url": "http://example.io/fhir/WithCode"
    },
    "base": {
      "kind": "resource",
      "package": "hl7.fhir.r4.core",
      "version": "4.0.1",
      "name": "DomainResource",
      "url": "http://hl7.org/fhir/StructureDefinition/DomainResource"
    },
    "fields": {
      "gender": {
        "type": {
          "kind": "primitive-type",
          "package": "hl7.fhir.r4.core",
          "version": "4.0.1",
          "name": "code",
          "url": "http://hl7.org/fhir/StructureDefinition/code"
        },
        "required": false,
        "excluded": false,
        "array": false,
        "binding": {
          "kind": "binding",
          "package": "shared",
          "version": "1.0.0",
          "name": "AdministrativeGender",
          "url": "urn:fhir:binding:AdministrativeGender"
        },
        "enum": {
          "isOpen": false,
          "values": [
            "male",
            "female",
            "other",
            "unknown"
          ]
        }
      }
    },
    "description": "description",
    "dependencies": [
      {
        "kind": "primitive-type",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "code",
        "url": "http://hl7.org/fhir/StructureDefinition/code"
      },
      {
        "kind": "resource",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "DomainResource",
        "url": "http://hl7.org/fhir/StructureDefinition/DomainResource"
      },
      {
        "kind": "binding",
        "package": "shared",
        "version": "1.0.0",
        "name": "AdministrativeGender",
        "url": "urn:fhir:binding:AdministrativeGender"
      }
    ]
  },
  {
    "identifier": {
      "kind": "binding",
      "package": "shared",
      "version": "1.0.0",
      "name": "AdministrativeGender",
      "url": "urn:fhir:binding:AdministrativeGender"
    },
    "valueset": {
      "kind": "value-set",
      "package": "hl7.fhir.r4.core",
      "version": "4.0.1",
      "name": "AdministrativeGender",
      "url": "http://hl7.org/fhir/ValueSet/administrative-gender"
    },
    "strength": "required",
    "enum": {
      "isOpen": false,
      "values": [
        "male",
        "female",
        "other",
        "unknown"
      ]
    },
    "dependencies": [
      {
        "kind": "value-set",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "AdministrativeGender",
        "url": "http://hl7.org/fhir/ValueSet/administrative-gender"
      }
    ]
  }
]"
`;

exports[`FHIR Schema to Type Schema (snapshot) with resource with codable concept 1`] = `
"[
  {
    "identifier": {
      "kind": "resource",
      "package": "mypackage",
      "version": "0.0.0",
      "name": "WithCodableConcept",
      "url": "http://example.io/fhir/WithCodableConcept"
    },
    "base": {
      "kind": "resource",
      "package": "hl7.fhir.r4.core",
      "version": "4.0.1",
      "name": "DomainResource",
      "url": "http://hl7.org/fhir/StructureDefinition/DomainResource"
    },
    "fields": {
      "maritalStatus": {
        "type": {
          "kind": "complex-type",
          "package": "hl7.fhir.r4.core",
          "version": "4.0.1",
          "name": "CodeableConcept",
          "url": "http://hl7.org/fhir/StructureDefinition/CodeableConcept"
        },
        "required": false,
        "excluded": false,
        "array": false,
        "binding": {
          "kind": "binding",
          "package": "shared",
          "version": "1.0.0",
          "name": "MaritalStatus",
          "url": "urn:fhir:binding:MaritalStatus"
        },
        "enum": {
          "isOpen": true,
          "values": [
            "A",
            "D",
            "I",
            "L",
            "M",
            "P",
            "S",
            "T",
            "U",
            "W",
            "UNK"
          ]
        }
      }
    },
    "description": "description",
    "dependencies": [
      {
        "kind": "complex-type",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "CodeableConcept",
        "url": "http://hl7.org/fhir/StructureDefinition/CodeableConcept"
      },
      {
        "kind": "resource",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "DomainResource",
        "url": "http://hl7.org/fhir/StructureDefinition/DomainResource"
      },
      {
        "kind": "binding",
        "package": "shared",
        "version": "1.0.0",
        "name": "MaritalStatus",
        "url": "urn:fhir:binding:MaritalStatus"
      }
    ]
  },
  {
    "identifier": {
      "kind": "binding",
      "package": "shared",
      "version": "1.0.0",
      "name": "MaritalStatus",
      "url": "urn:fhir:binding:MaritalStatus"
    },
    "valueset": {
      "kind": "value-set",
      "package": "hl7.fhir.r4.core",
      "version": "4.0.1",
      "name": "MaritalStatus",
      "url": "http://hl7.org/fhir/ValueSet/marital-status"
    },
    "strength": "extensible",
    "enum": {
      "isOpen": true,
      "values": [
        "A",
        "D",
        "I",
        "L",
        "M",
        "P",
        "S",
        "T",
        "U",
        "W",
        "UNK"
      ]
    },
    "dependencies": [
      {
        "kind": "value-set",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "MaritalStatus",
        "url": "http://hl7.org/fhir/ValueSet/marital-status"
      }
    ]
  }
]"
`;

exports[`FHIR Schema to Type Schema (snapshot) with resource with choice 1`] = `
"[
  {
    "identifier": {
      "kind": "resource",
      "package": "mypackage",
      "version": "0.0.0",
      "name": "WithChoice",
      "url": "http://example.io/fhir/WithChoice"
    },
    "base": {
      "kind": "resource",
      "package": "hl7.fhir.r4.core",
      "version": "4.0.1",
      "name": "DomainResource",
      "url": "http://hl7.org/fhir/StructureDefinition/DomainResource"
    },
    "fields": {
      "deceasedDateTime": {
        "type": {
          "kind": "primitive-type",
          "package": "hl7.fhir.r4.core",
          "version": "4.0.1",
          "name": "dateTime",
          "url": "http://hl7.org/fhir/StructureDefinition/dateTime"
        },
        "required": false,
        "excluded": false,
        "array": false,
        "choiceOf": "deceased"
      },
      "deceasedBoolean": {
        "type": {
          "kind": "primitive-type",
          "package": "hl7.fhir.r4.core",
          "version": "4.0.1",
          "name": "boolean",
          "url": "http://hl7.org/fhir/StructureDefinition/boolean"
        },
        "required": false,
        "excluded": false,
        "array": false,
        "choiceOf": "deceased"
      },
      "deceased": {
        "required": false,
        "excluded": false,
        "array": false,
        "choices": [
          "deceasedBoolean",
          "deceasedDateTime"
        ]
      }
    },
    "description": "description",
    "dependencies": [
      {
        "kind": "primitive-type",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "boolean",
        "url": "http://hl7.org/fhir/StructureDefinition/boolean"
      },
      {
        "kind": "primitive-type",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "dateTime",
        "url": "http://hl7.org/fhir/StructureDefinition/dateTime"
      },
      {
        "kind": "resource",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "DomainResource",
        "url": "http://hl7.org/fhir/StructureDefinition/DomainResource"
      }
    ]
  }
]"
`;

exports[`FHIR Schema to Type Schema (snapshot) with resource with nested type 1`] = `
"[
  {
    "identifier": {
      "kind": "resource",
      "package": "mypackage",
      "version": "0.0.0",
      "name": "WithNestedType",
      "url": "http://example.io/fhir/WithNestedType"
    },
    "base": {
      "kind": "resource",
      "package": "hl7.fhir.r4.core",
      "version": "4.0.1",
      "name": "DomainResource",
      "url": "http://hl7.org/fhir/StructureDefinition/DomainResource"
    },
    "fields": {
      "link": {
        "type": {
          "kind": "nested",
          "package": "mypackage",
          "version": "0.0.0",
          "name": "link",
          "url": "http://example.io/fhir/WithNestedType#link"
        },
        "array": true,
        "required": false,
        "excluded": false
      }
    },
    "nested": [
      {
        "identifier": {
          "kind": "nested",
          "package": "mypackage",
          "version": "0.0.0",
          "name": "link",
          "url": "http://example.io/fhir/WithNestedType#link"
        },
        "base": {
          "kind": "complex-type",
          "package": "hl7.fhir.r4.core",
          "version": "4.0.1",
          "name": "BackboneElement",
          "url": "http://hl7.org/fhir/StructureDefinition/BackboneElement"
        },
        "fields": {
          "someString": {
            "type": {
              "kind": "primitive-type",
              "package": "hl7.fhir.r4.core",
              "version": "4.0.1",
              "name": "string",
              "url": "http://hl7.org/fhir/StructureDefinition/string"
            },
            "required": true,
            "excluded": false,
            "array": false
          }
        }
      }
    ],
    "description": "some description",
    "dependencies": [
      {
        "kind": "complex-type",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "BackboneElement",
        "url": "http://hl7.org/fhir/StructureDefinition/BackboneElement"
      },
      {
        "kind": "resource",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "DomainResource",
        "url": "http://hl7.org/fhir/StructureDefinition/DomainResource"
      },
      {
        "kind": "primitive-type",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "string",
        "url": "http://hl7.org/fhir/StructureDefinition/string"
      }
    ]
  }
]"
`;

exports[`FHIR Schema to Type Schema (snapshot) with resource with nested type 2 1`] = `
"[
  {
    "identifier": {
      "kind": "resource",
      "package": "mypackage",
      "version": "0.0.0",
      "name": "Root",
      "url": "http://example.io/fhir/Root"
    },
    "base": {
      "kind": "resource",
      "package": "hl7.fhir.r4.core",
      "version": "4.0.1",
      "name": "DomainResource",
      "url": "http://hl7.org/fhir/StructureDefinition/DomainResource"
    },
    "fields": {
      "field": {
        "type": {
          "kind": "nested",
          "package": "mypackage",
          "version": "0.0.0",
          "name": "field",
          "url": "http://example.io/fhir/Root#field"
        },
        "array": true,
        "required": false,
        "excluded": false
      }
    },
    "nested": [
      {
        "identifier": {
          "kind": "nested",
          "package": "mypackage",
          "version": "0.0.0",
          "name": "field",
          "url": "http://example.io/fhir/Root#field"
        },
        "base": {
          "kind": "complex-type",
          "package": "hl7.fhir.r4.core",
          "version": "4.0.1",
          "name": "BackboneElement",
          "url": "http://hl7.org/fhir/StructureDefinition/BackboneElement"
        },
        "fields": {
          "subfield": {
            "type": {
              "kind": "nested",
              "package": "mypackage",
              "version": "0.0.0",
              "name": "field.subfield",
              "url": "http://example.io/fhir/Root#field.subfield"
            },
            "array": true,
            "required": false,
            "excluded": false
          }
        }
      },
      {
        "identifier": {
          "kind": "nested",
          "package": "mypackage",
          "version": "0.0.0",
          "name": "field.subfield",
          "url": "http://example.io/fhir/Root#field.subfield"
        },
        "base": {
          "kind": "complex-type",
          "package": "hl7.fhir.r4.core",
          "version": "4.0.1",
          "name": "BackboneElement",
          "url": "http://hl7.org/fhir/StructureDefinition/BackboneElement"
        },
        "fields": {
          "subsubfield": {
            "type": {
              "kind": "primitive-type",
              "package": "hl7.fhir.r4.core",
              "version": "4.0.1",
              "name": "string",
              "url": "http://hl7.org/fhir/StructureDefinition/string"
            },
            "required": false,
            "excluded": false,
            "array": false
          }
        }
      }
    ],
    "description": "some description",
    "dependencies": [
      {
        "kind": "complex-type",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "BackboneElement",
        "url": "http://hl7.org/fhir/StructureDefinition/BackboneElement"
      },
      {
        "kind": "resource",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "DomainResource",
        "url": "http://hl7.org/fhir/StructureDefinition/DomainResource"
      },
      {
        "kind": "primitive-type",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "string",
        "url": "http://hl7.org/fhir/StructureDefinition/string"
      }
    ]
  }
]"
`;

exports[`FHIR Schema to Type Schema (snapshot) Real world examples coding primitive type 1`] = `
"[
  {
    "identifier": {
      "kind": "complex-type",
      "package": "mypackage",
      "version": "0.0.0",
      "name": "Coding",
      "url": "http://hl7.org/fhir/StructureDefinition/Coding"
    },
    "base": {
      "kind": "complex-type",
      "package": "hl7.fhir.r4.core",
      "version": "4.0.1",
      "name": "Element",
      "url": "http://hl7.org/fhir/StructureDefinition/Element"
    },
    "fields": {
      "system": {
        "type": {
          "kind": "primitive-type",
          "package": "hl7.fhir.r4.core",
          "version": "4.0.1",
          "name": "uri",
          "url": "http://hl7.org/fhir/StructureDefinition/uri"
        },
        "required": false,
        "excluded": false,
        "array": false
      },
      "version": {
        "type": {
          "kind": "primitive-type",
          "package": "hl7.fhir.r4.core",
          "version": "4.0.1",
          "name": "string",
          "url": "http://hl7.org/fhir/StructureDefinition/string"
        },
        "required": false,
        "excluded": false,
        "array": false
      },
      "code": {
        "type": {
          "kind": "primitive-type",
          "package": "hl7.fhir.r4.core",
          "version": "4.0.1",
          "name": "code",
          "url": "http://hl7.org/fhir/StructureDefinition/code"
        },
        "required": false,
        "excluded": false,
        "array": false
      },
      "display": {
        "type": {
          "kind": "primitive-type",
          "package": "hl7.fhir.r4.core",
          "version": "4.0.1",
          "name": "string",
          "url": "http://hl7.org/fhir/StructureDefinition/string"
        },
        "required": false,
        "excluded": false,
        "array": false
      },
      "userSelected": {
        "type": {
          "kind": "primitive-type",
          "package": "hl7.fhir.r4.core",
          "version": "4.0.1",
          "name": "boolean",
          "url": "http://hl7.org/fhir/StructureDefinition/boolean"
        },
        "required": false,
        "excluded": false,
        "array": false
      }
    },
    "description": "Base StructureDefinition for Coding Type: A reference to a code defined by a terminology system.",
    "dependencies": [
      {
        "kind": "primitive-type",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "boolean",
        "url": "http://hl7.org/fhir/StructureDefinition/boolean"
      },
      {
        "kind": "primitive-type",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "code",
        "url": "http://hl7.org/fhir/StructureDefinition/code"
      },
      {
        "kind": "complex-type",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "Element",
        "url": "http://hl7.org/fhir/StructureDefinition/Element"
      },
      {
        "kind": "primitive-type",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "string",
        "url": "http://hl7.org/fhir/StructureDefinition/string"
      },
      {
        "kind": "primitive-type",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "uri",
        "url": "http://hl7.org/fhir/StructureDefinition/uri"
      }
    ]
  }
]"
`;

exports[`FHIR Schema to Type Schema (snapshot) Real world examples string primitive type 1`] = `
"[
  {
    "identifier": {
      "kind": "primitive-type",
      "package": "mypackage",
      "version": "0.0.0",
      "name": "string",
      "url": "http://hl7.org/fhir/StructureDefinition/string"
    },
    "description": "Base StructureDefinition for string Type: A sequence of Unicode characters",
    "base": {
      "kind": "complex-type",
      "package": "hl7.fhir.r4.core",
      "version": "4.0.1",
      "name": "Element",
      "url": "http://hl7.org/fhir/StructureDefinition/Element"
    },
    "dependencies": [
      {
        "kind": "complex-type",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "Element",
        "url": "http://hl7.org/fhir/StructureDefinition/Element"
      }
    ]
  }
]"
`;

exports[`FHIR Schema to Type Schema (snapshot) Custom resource TutorNotificationTemplate 1`] = `
"[
  {
    "identifier": {
      "kind": "resource",
      "package": "mypackage",
      "version": "0.0.0",
      "name": "TutorNotificationTemplate",
      "url": "http://example.com/aidbox-sms-tutor/TutorNotificationTemplate"
    },
    "base": {
      "kind": "resource",
      "package": "hl7.fhir.r4.core",
      "version": "4.0.1",
      "name": "DomainResource",
      "url": "http://hl7.org/fhir/StructureDefinition/DomainResource"
    },
    "fields": {
      "template": {
        "type": {
          "kind": "primitive-type",
          "package": "mypackage",
          "version": "0.0.0",
          "name": "string",
          "url": "http://hl7.org/fhir/StructureDefinition/string"
        },
        "required": true,
        "excluded": false,
        "array": false
      }
    },
    "dependencies": [
      {
        "kind": "resource",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "DomainResource",
        "url": "http://hl7.org/fhir/StructureDefinition/DomainResource"
      },
      {
        "kind": "primitive-type",
        "package": "mypackage",
        "version": "0.0.0",
        "name": "string",
        "url": "http://hl7.org/fhir/StructureDefinition/string"
      }
    ]
  }
]"
`;

exports[`FHIR Schema to Type Schema (snapshot) Custom resource TutorNotification 1`] = `
"[
  {
    "identifier": {
      "kind": "resource",
      "package": "mypackage",
      "version": "0.0.0",
      "name": "TutorNotification",
      "url": "http://example.com/aidbox-sms-tutor/TutorNotification"
    },
    "base": {
      "kind": "resource",
      "package": "hl7.fhir.r4.core",
      "version": "4.0.1",
      "name": "DomainResource",
      "url": "http://hl7.org/fhir/StructureDefinition/DomainResource"
    },
    "fields": {
      "type": {
        "type": {
          "kind": "primitive-type",
          "package": "mypackage",
          "version": "0.0.0",
          "name": "string",
          "url": "http://hl7.org/fhir/StructureDefinition/string"
        },
        "required": true,
        "excluded": false,
        "array": false,
        "binding": {
          "kind": "binding",
          "package": "mypackage",
          "version": "0.0.0",
          "name": "TutorNotification.type_binding",
          "url": "http://example.com/aidbox-sms-tutor/TutorNotification#type_binding"
        },
        "enum": {
          "isOpen": false,
          "values": [
            "phone",
            "fax",
            "email",
            "pager",
            "url",
            "sms",
            "other"
          ]
        }
      },
      "status": {
        "type": {
          "kind": "primitive-type",
          "package": "mypackage",
          "version": "0.0.0",
          "name": "string",
          "url": "http://hl7.org/fhir/StructureDefinition/string"
        },
        "required": true,
        "excluded": false,
        "array": false,
        "binding": {
          "kind": "binding",
          "package": "mypackage",
          "version": "0.0.0",
          "name": "TutorNotification.status_binding",
          "url": "http://example.com/aidbox-sms-tutor/TutorNotification#status_binding"
        },
        "enum": {
          "isOpen": false,
          "values": [
            "draft",
            "requested",
            "received",
            "accepted",
            "rejected",
            "ready",
            "cancelled",
            "in-progress",
            "on-hold",
            "failed",
            "completed",
            "entered-in-error"
          ]
        }
      },
      "template": {
        "type": {
          "kind": "complex-type",
          "package": "hl7.fhir.r4.core",
          "version": "4.0.1",
          "name": "Reference",
          "url": "http://hl7.org/fhir/StructureDefinition/Reference"
        },
        "required": true,
        "excluded": false,
        "reference": [
          {
            "kind": "resource",
            "package": "mypackage",
            "version": "0.0.0",
            "name": "TutorNotificationTemplate",
            "url": "http://example.com/aidbox-sms-tutor/TutorNotificationTemplate"
          }
        ],
        "array": false
      },
      "message": {
        "type": {
          "kind": "primitive-type",
          "package": "mypackage",
          "version": "0.0.0",
          "name": "string",
          "url": "http://hl7.org/fhir/StructureDefinition/string"
        },
        "required": false,
        "excluded": false,
        "array": false
      },
      "sendAfter": {
        "type": {
          "kind": "primitive-type",
          "package": "hl7.fhir.r4.core",
          "version": "4.0.1",
          "name": "dateTime",
          "url": "http://hl7.org/fhir/StructureDefinition/dateTime"
        },
        "required": true,
        "excluded": false,
        "array": false
      },
      "subject": {
        "type": {
          "kind": "complex-type",
          "package": "hl7.fhir.r4.core",
          "version": "4.0.1",
          "name": "Reference",
          "url": "http://hl7.org/fhir/StructureDefinition/Reference"
        },
        "required": true,
        "excluded": false,
        "reference": [
          {
            "kind": "resource",
            "package": "hl7.fhir.r4.core",
            "version": "4.0.1",
            "name": "Patient",
            "url": "http://hl7.org/fhir/StructureDefinition/Patient"
          }
        ],
        "array": false
      }
    },
    "dependencies": [
      {
        "kind": "binding",
        "package": "mypackage",
        "version": "0.0.0",
        "name": "TutorNotification.status_binding",
        "url": "http://example.com/aidbox-sms-tutor/TutorNotification#status_binding"
      },
      {
        "kind": "binding",
        "package": "mypackage",
        "version": "0.0.0",
        "name": "TutorNotification.type_binding",
        "url": "http://example.com/aidbox-sms-tutor/TutorNotification#type_binding"
      },
      {
        "kind": "primitive-type",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "dateTime",
        "url": "http://hl7.org/fhir/StructureDefinition/dateTime"
      },
      {
        "kind": "resource",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "DomainResource",
        "url": "http://hl7.org/fhir/StructureDefinition/DomainResource"
      },
      {
        "kind": "complex-type",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "Reference",
        "url": "http://hl7.org/fhir/StructureDefinition/Reference"
      },
      {
        "kind": "primitive-type",
        "package": "mypackage",
        "version": "0.0.0",
        "name": "string",
        "url": "http://hl7.org/fhir/StructureDefinition/string"
      }
    ]
  },
  {
    "identifier": {
      "kind": "binding",
      "package": "mypackage",
      "version": "0.0.0",
      "name": "TutorNotification.status_binding",
      "url": "http://example.com/aidbox-sms-tutor/TutorNotification#status_binding"
    },
    "valueset": {
      "kind": "value-set",
      "package": "hl7.fhir.r4.core",
      "version": "4.0.1",
      "name": "TaskStatus",
      "url": "http://hl7.org/fhir/ValueSet/task-status"
    },
    "strength": "required",
    "enum": {
      "isOpen": false,
      "values": [
        "draft",
        "requested",
        "received",
        "accepted",
        "rejected",
        "ready",
        "cancelled",
        "in-progress",
        "on-hold",
        "failed",
        "completed",
        "entered-in-error"
      ]
    },
    "dependencies": [
      {
        "kind": "value-set",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "TaskStatus",
        "url": "http://hl7.org/fhir/ValueSet/task-status"
      }
    ]
  },
  {
    "identifier": {
      "kind": "binding",
      "package": "mypackage",
      "version": "0.0.0",
      "name": "TutorNotification.type_binding",
      "url": "http://example.com/aidbox-sms-tutor/TutorNotification#type_binding"
    },
    "valueset": {
      "kind": "value-set",
      "package": "hl7.fhir.r4.core",
      "version": "4.0.1",
      "name": "ContactPointSystem",
      "url": "http://hl7.org/fhir/ValueSet/contact-point-system"
    },
    "strength": "required",
    "enum": {
      "isOpen": false,
      "values": [
        "phone",
        "fax",
        "email",
        "pager",
        "url",
        "sms",
        "other"
      ]
    },
    "dependencies": [
      {
        "kind": "value-set",
        "package": "hl7.fhir.r4.core",
        "version": "4.0.1",
        "name": "ContactPointSystem",
        "url": "http://hl7.org/fhir/ValueSet/contact-point-system"
      }
    ]
  }
]"
`;
